--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "bootstrap": "^5.3.3",
         "sweetalert2": "^11.10.8"
     }
 }
